--- a/Xamarin/ProjectEnt_SensorTag.SensorTagLib/ProjectEnt_SensorTag.SensorTagLib.csproj
+++ b/Xamarin/ProjectEnt_SensorTag.SensorTagLib/ProjectEnt_SensorTag.SensorTagLib.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DeviceFactory.cs" />
+    <Compile Include="DeviceSetup.cs" />
     <Compile Include="Exceptions\NoDeviceFoundException.cs" />
     <Compile Include="Exceptions\UnknownDeviceException.cs" />
     <Compile Include="SensorTag.cs" />
