--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/ProjectEnt_SensorTag.csproj
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag/ProjectEnt_SensorTag.csproj
@@ -40,6 +40,7 @@
     </Compile>
     <Compile Include="ViewModel\LogInViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\SensorTagDetailViewModel.cs" />
     <Compile Include="ViewModel\SensorTagViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Compile Include="Views\Home.xaml.cs">
