--- a/Java/src/main/resources/application.properties
+++ b/Java/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
+security.user.name=random
+security.user.password=r1ndom
+security.role = admin
