--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/ProjectEnt_SensorTag.UWP.csproj
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/ProjectEnt_SensorTag.UWP.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Navigation\NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModelLocator.cs" />
+    <Compile Include="ViewModels\CustomCommand.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\OverviewViewModel.cs" />
