Converters + EF + TitleScreen

--- a/EntityFramework/entmob_EF/entmob_EF.csproj
+++ b/EntityFramework/entmob_EF/entmob_EF.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\201610201357350_test2.Designer.cs">
       <DependentUpon>201610201357350_test2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201611091636126_edit_table.cs" />
+    <Compile Include="Migrations\201611091636126_edit_table.Designer.cs">
+      <DependentUpon>201611091636126_edit_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -101,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201610201357350_test2.resx">
       <DependentUpon>201610201357350_test2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201611091636126_edit_table.resx">
+      <DependentUpon>201611091636126_edit_table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
