--- a/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/ProjectEnt_SensorTag.UWP.csproj
+++ b/Xamarin/ProjectEnt_SensorTag/ProjectEnt_SensorTag.UWP/ProjectEnt_SensorTag.UWP.csproj
@@ -96,6 +96,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Messaging\Messenger.cs" />
     <Compile Include="Navigation\INavigationService.cs" />
     <Compile Include="Navigation\NavigationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
