--- a/Xamarin/ProjectEnt_SensorTag.UWPUnitTests/ProjectEnt_SensorTag.UWPUnitTests.csproj
+++ b/Xamarin/ProjectEnt_SensorTag.UWPUnitTests/ProjectEnt_SensorTag.UWPUnitTests.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{51f2955b-c3e8-449c-b4f3-f7fa97789674}</ProjectGuid>
+    <ProjectGuid>{51F2955B-C3E8-449C-B4F3-F7FA97789674}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ProjectEnt_SensorTag.UWPUnitTests</RootNamespace>
@@ -16,10 +16,8 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    
     <PackageCertificateKeyFile>ProjectEnt_SensorTag.UWPUnitTests_TemporaryKey.pfx</PackageCertificateKeyFile>
-    
-    <UnitTestPlatformVersion  Condition="'$(UnitTestPlatformVersion)' == ''">14.0</UnitTestPlatformVersion>
+    <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">14.0</UnitTestPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -113,9 +111,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    
     <None Include="ProjectEnt_SensorTag.UWPUnitTests_TemporaryKey.pfx" />
-    
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\UnitTestApp.rd.xml" />
@@ -126,6 +122,16 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectEnt_SensorTag.Model\ProjectEnt_SensorTag.Model.csproj">
+      <Project>{290cdb70-cafa-4aaa-9bbd-e8080bce2f9f}</Project>
+      <Name>ProjectEnt_SensorTag.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ProjectEnt_SensorTag.UWPLib\ProjectEnt_SensorTag.UWPLib.csproj">
+      <Project>{CDEF10B7-0F0B-4188-BA6F-CEF6D75BD0A2}</Project>
+      <Name>ProjectEnt_SensorTag.UWPLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
