--- a/Xamarin/ProjectEnt_SensorTag.UWPUnitTest/ProjectEnt_SensorTag.UWPUnitTest.csproj
+++ b/Xamarin/ProjectEnt_SensorTag.UWPUnitTest/ProjectEnt_SensorTag.UWPUnitTest.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{51F2955B-C3E8-449C-B4F3-F7FA97789674}</ProjectGuid>
+    <ProjectGuid>{AC3FF66C-C897-4505-82E0-298DF872A475}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProjectEnt_SensorTag.UWPUnitTests</RootNamespace>
-    <AssemblyName>ProjectEnt_SensorTag.UWPUnitTests</AssemblyName>
+    <RootNamespace>ProjectEnt_SensorTag.UWPUnitTest</RootNamespace>
+    <AssemblyName>ProjectEnt_SensorTag.UWPUnitTest</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
@@ -16,7 +16,7 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>ProjectEnt_SensorTag.UWPUnitTests_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>ProjectEnt_SensorTag.UWPUnitTest_TemporaryKey.pfx</PackageCertificateKeyFile>
     <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">14.0</UnitTestPlatformVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -111,7 +111,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="ProjectEnt_SensorTag.UWPUnitTests_TemporaryKey.pfx" />
+    <None Include="ProjectEnt_SensorTag.UWPUnitTest_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\UnitTestApp.rd.xml" />
@@ -129,7 +129,7 @@
       <Name>ProjectEnt_SensorTag.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\ProjectEnt_SensorTag.UWPLib\ProjectEnt_SensorTag.UWPLib.csproj">
-      <Project>{CDEF10B7-0F0B-4188-BA6F-CEF6D75BD0A2}</Project>
+      <Project>{cdef10b7-0f0b-4188-ba6f-cef6d75bd0a2}</Project>
       <Name>ProjectEnt_SensorTag.UWPLib</Name>
     </ProjectReference>
   </ItemGroup>
